--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 	<h1>Olá mundo!</hl>
 	<p>Estas são minhas primeiras linhas em html</p>
+	<img src="https://preview.redd.it/x5uya56po3w81.jpg?auto=webp&s=b127015146fd83276e1ba026f8a3ae09071174ec">
 </body>
 </html>
