--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Olá mundo!</hl>
 	<p>Estas são minhas primeiras linhas em html</p>
-	<img src="https://preview.redd.it/x5uya56po3w81.jpg?auto=webp&s=b127015146fd83276e1ba026f8a3ae09071174ec">
+	<img src="https://preview.redd.it/x5uya56po3w81.jpg?auto=webp&s=b127015146fd83276e1ba026f8a3ae09071174ec" width="400px">
 	<img src="https://is4-ssl.mzstatic.com/image/thumb/KPw6zzc6WbfVWaNXw1XivA/1200x675mf.jpg">
 </body>
 </html>
